# praxis

./: .gitignore  .jupyterlite.doit.db  AGENTS.md  CONTRIBUTING.md  justfile  pyproject.toml
.agent/: FINAL_MVP_IMPLEMENTATION_STRATEGY.md  FINAL_PROTOCOL_EXECUTION_FIX_PLAN.md  PROTOCOL_PLAYGROUND_FIX_PLAN.md  TECHNICAL_DEBT.md
.agent/artifacts/: e2e_verification_feb03.md
.agent/prompts/: audit-hardcoded-logic.md  fix-deck-serialization-fqn.md  protocol-wizard-e2e-fix.md
.agent/scripts/: dispatch-jules-e2e.sh
.agent/staging/: critical_features.md  e2e_autonomous_handoff.md  e2e_persistent_bugs.md  e2e_static_analysis.md  file_splitting_report.md  final_ship.md  ship_coordination_handoff.md  ship_work_plan.md
.github/workflows/: deploy.yml
docs/: index.md
docs/api/: rest-api.md
docs/architecture/: backend.md  frontend.md
docs/development/: code-style.md  contributing.md  testing.md
docs/getting-started/: browser-mode.md  installation-browser.md  installation-lite.md  installation-production.md  quickstart.md
docs/reference/: cli-commands.md  configuration.md  troubleshooting.md
docs/user-guide/: protocols.md
praxis/.agent/: .migrated  HANDOFF.md  NEXT_ASSET_WIZARD_DECK_SELECTOR.md  PRAXIS_e2e_diffs.md  TECHNICAL_DEBT.md  praxis_e2e_diff_report.md
praxis/backend/: main.py
scripts/: dev-frontend.sh  env_setup.sh  generate_browser_db.py  jules-integration-setup.sh  jules-test-phase1.sh  jules-test-phase2.sh  jules-test-phase3.sh  jules-test-phase4.sh  serve-static.json  simulate-ghpages.sh
stubs/: pyproject.toml
stubs/pylibftdi/: __init__.py
(+375 files in other folders)
